# Zayden

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  TODO.md  activityTracker.js  autoUpdating.ts  blacklist.js  blacklist.ts  bot-config.ts  client.ts  command.js  common.js  common.ts  config.json  deploy_commands.ts  dmMatt.js  index.js  index.ts  init.js  init.ts  moderationFunctions.js  moderationFunctions.ts  mongoDb.ts  musicFunctions.js  package-lock.json  package.json  pingSteve.js  questionMe.js  reactionRole.ts  reactionRoleFuncions.js  reactionRoles.js  rule.js  rules.js  server.ts  servers.ts  sql.js  sql.ts  sqlx-data.json  (+6 more)
.sqlx/: query-0084a90ad96f1297fc16f492bc7dee79835fed3e2d50df90e7de75db834820fa.json  query-0346af5d5e6b7955ad2b7e830a80033a768ea8bfbec86aad96f43a831cbc3557.json  query-03846412898abbdb0728e11f50a76d3cbce909bc351a39c9c15417b808a44da9.json  query-0579422a3aa28222f7aaca46c0bb7cab71a2f41321757944f87974f12e1edf98.json  query-0e3124d8256176b76f6d4970aaadf6936f7cf088fe327f3855dec21ba517519d.json  query-13327e50e94c709ff67b101b38450cc2b17c19344bab469a271fd74ea7bf34dc.json  query-1bfecf22eb35f3d17d6ae2cae429923ce5cec321cb0ef6980eebccfc177f1ca6.json  query-23b916051e28a598fdfafffb000e59cda2596c88fe14a36054e82c24ade26227.json  query-4ed7d215c6d9694048bab3773bd9f12655869d74efcf3cdcaceb53c793509fce.json  query-50488cef435dbfd363f1b06f75c4779d16fe22ec7ddaf2755cf9ae2172af95c2.json  query-55fdd4ef1ff0139fcf4b47dfd1058d1746da57b39e9f34ab65c26aaca985be42.json  query-595822ad4fd99dc36647340222fa9407246ae95d37986a3bc26a0176b021ddb9.json  query-6afef18ed8eeeab114681c7fcfd73addf396edacbda79065ac986f5cf737a014.json  query-7dfce51820c0edceeac86ba681c68a5f1d8fd4103f720e3ab453b419304695d2.json  query-967f5afa3fa72eba2bedb930b70574d5d0b6b64004bf89c51c0ec7ec4de67378.json  query-a2a27b4d20c1630dcaccb4061604944464dd667ef649610c13d35022942bc460.json  query-a8b2fb4b03ba30febb93f1694416dbabd844f05569e925d71555dfb180b30197.json  query-a989b46d6ee04b14872717eedd37f866f163c42b6c977cb79bc1e882cd1c6490.json  query-ba7ac2ab7e6e5973b2f457c7d085d3f08371805302fe1564d24eec7114a794d7.json  query-c9df11b97d231382d7b983dd192e191ce7946c09f74938aa9d5680c328ab1199.json  query-c9f44fbd41d56862a16aca134c63d8a7e2fe68423159c23c46b07f9edaf5bf16.json  query-dcdecf08a9ab393faf33d3b0f0ca4ce5e81c47a1f56352922b26ea6fe582ab69.json  query-e2a5bbdb24a66a228c1bd359b20de1022ffe19d5dbe0ba88a844d1c5a8090186.json  query-eacca50c4f534f455bbed2a191e994b8ee84934d2e64bece8744e9822f12b5f4.json
Configs/: 8ballResponses.json  ckConfig.json  imgConfig.json
archive/: common.js
autoUpdating/: updateRules.ts
commands/: command-base.js  command.ts  command_base.ts  load-commands.js  load_commands.ts  load_slash_commands.ts
configs/: bot_config.json  image_config.json
database/: database.db
events/: event-base.js  voiceStateUpdate.ts
messages/: rules.md
migrations/: 20230701030800_good_morning_images_table.down.sql  20230701030800_good_morning_images_table.up.sql  20230701030846_good_night_images_table.down.sql  20230701030846_good_night_images_table.up.sql  20230704162420_create_servers_table.down.sql  20230704162420_create_servers_table.up.sql  20230705130941_create_channel_table.down.sql  20230705130941_create_channel_table.up.sql  20230705140032_create_roles_table.up.sql  20230706124637_create_gold_star_table.down.sql  20230706124637_create_gold_star_table.up.sql  20230708145855_create_support_table.down.sql  20230708145855_create_support_table.up.sql  (+59 more)
models/: server.ts  (+7 more)
(+542 files in other folders)
