[package]
name = "zayden"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
dotenvy = "0.15.*"
rand = "0.8.*"
regex = "1.*"
reqwest = { version = "0.11.*", features = ["json"]}
serde = "1.*"
serde_json = "1.*"
sqlx = {version = "0.7.*", features=["runtime-async-std", "tls-native-tls", "postgres", "macros", "chrono"]}
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.12.0-rc"
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]
