[package]
name = "zayden"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
cron = { version = "*", features = [] }
dotenvy = "*"
lazy_static = "*"
log = { version = "*", features = ["release_max_level_info"] }
rand = "*"
regex = "*"
reqwest = { version = "*", features = ["json"] }
serde = "*"
serde_json = "*"
sqlx = { version = "*", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
walkdir = "*"

[dependencies.serenity]
version = "*"
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
