[package]
name = "zayden-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bunny-cdn-wrapper = { git = "https://github.com/ViridianLink/bunny-cdn-wrapper.git", branch = "main" }
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
reaction-roles = { git = "https://github.com/zayden-bot/reaction-roles.git", branch = "main" }
gold-star = { git = "https://github.com/zayden-bot/gold-star.git", branch = "main" }
patreon-api = { git = "https://github.com/ViridianLink/patreon-api.git", branch = "main" }
ticket = { git = "https://github.com/zayden-bot/ticket", branch = "main" }
async-trait = { version = "*", default-features = false }
chrono = "*"
cron = "*"
dotenvy = { version = "*", default-features = false }
futures = { version = "*", default-features = false }
lazy_static = "*"
#piet = "0.6.2"
#  Features:
#  - bmp
#  - dds
#  - dxt
#  - farbfeld
#  - gif
#  - hdr
#  - ico
#  - image
#  - image_png
#  - jpeg
#  - jpeg_rayon
#  - os_info
#  - pico-args
#  - png
#  - pnm
#  - samples
#  - serde
#  - tga
#  - tiff
#  - webp
rand = "*"
reqwest = { version = "*", features = ["json"] }
serde = "*"
serde_json = "*"
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
url = "*"
walkdir = "*"

[dependencies.serenity]
version = "*"
default-features = false
features = [
    "builder",
    "client",
    "collector",
    "gateway",
    "model",
    "utils",
    "rustls_backend",
]

[profile.release]
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"
